# multi_agent_planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  assemble.py  commands.txt  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  architect.py  base_agent.py  critic.py  developer.py  documenter.py  integrator.py  planner.py  qa.py  test_generator.py
core/: __init__.py  assembler.py  llm_provider.py  logger.py  memory.py  orchestrator.py  retry.py  sandbox.py  shared_context.py  task_schema.py
logs/: session-20250730_201525.json  session-20250730_204351.json
memory/: .gitkeep
output/: .gitkeep  final_program.py  session_log.json  task_log.json
tests/: test_agents.py  test_core.py
web/: app.py  openapi.yml
web/templates/: index.html
